# Piicasso

./: .dockerignore  .gitignore  .gitignore.txt  .mcp.json  Dockerfile  LICENSE  README.md  SECURITY_REMEDIATION.md  backup.txt  db_ops.bat  db_ops.sh  docker-compose-dev.yml  docker-compose.yml  opencode.json  package-lock.json  package.json  piicasso.md  render.yaml  requirements.txt  vercel.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/: dependabot.yml
.github/workflows/: ci.yml  keep-alive.yml
Piicasso/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  render.yaml  requirements.txt  tmpclaude-7cb2-cwd  vercel.json
Piicasso/backend/: .env.example  .flake8  .gitignore  (+16 more)
Piicasso/cli-python/: LICENSE  MANIFEST.in  README.md  pyproject.toml
Piicasso/cli-python/src/piicasso/: __init__.py  __main__.py  cli.py  config.py  repl.py
Piicasso/cli-python/src/piicasso/api/: __init__.py  client.py
Piicasso/cli-python/src/piicasso/engine/: __init__.py  pii.py
Piicasso/cli-python/src/piicasso/ui/: __init__.py  theme.py
Piicasso/cli-python/tests/: test_pii.py
backend/: .env  .gitignore  celery.py  check_output.txt  db.sqlite3  manage.py  render.yaml
docs/: CONTRIBUTING.md  DEPLOYMENT.md  MONITORING.md
frontend/: .env  package-lock.json  package.json  tailwind.config.js
gateway/: Dockerfile  nginx.conf
identity_service/: Dockerfile.dev  manage.py  piilogger_handler.py  requirements.txt  start.sh
nginx/: nginx.conf
piilogger/: logs.db  package-lock.json  package.json  server.js
scripts/: e2e_test.py
test_screenshots/: test_results.json
user_microservice/: Dockerfile  requirements.txt
(+365 files in other folders)
