[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "piicasso"
version = "0.1.0"
description = "Command-line interface for PIIcasso — PII exposure intelligence and adversarial wordlist platform."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "PIIcasso contributors" }]
keywords = ["pii", "security", "cli", "redaction", "wordlist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.urls]
Homepage = "https://github.com/yokesh-kumar-M/Piicasso"
Issues = "https://github.com/yokesh-kumar-M/Piicasso/issues"
Repository = "https://github.com/yokesh-kumar-M/Piicasso"

[project.scripts]
piicasso = "piicasso.cli:main"

[tool.hatch.version]
path = "src/piicasso/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/piicasso"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
